# copilot4Coder

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sanitized_calibrated.jsonl
log/tensorboard/: events.out.tfevents.1734936542.dsw-784574-ccf877b79-fjkxl.1972.0  events.out.tfevents.1735204971.dsw-789990-7678ff7dc5-zpxtc.1918.0  events.out.tfevents.1735206886.dsw-398749-76c6d6ccb6-htds7.893.0  events.out.tfevents.1735304051.dsw-791758-5546785d79-2sdqz.3023.0
log/wandb/offline-run-20241221_140617-fj7riwq6/: run-fj7riwq6.wandb
log/wandb/offline-run-20241221_140617-fj7riwq6/files/: requirements.txt  wandb-metadata.json
log/wandb/offline-run-20241223_115722-3xc5l0op/: run-3xc5l0op.wandb
log/wandb/offline-run-20241223_115722-3xc5l0op/files/: requirements.txt  wandb-metadata.json
log/wandb/offline-run-20241223_144847-hsor6tqq/: run-hsor6tqq.wandb
log/wandb/offline-run-20241223_144847-hsor6tqq/files/: requirements.txt  wandb-metadata.json
note/: eval.ipynb
script/: ds_config.json  param_config.yaml  params.json  train.sh  train_deepspeed.sh
src/common/: constant.py  measure.py
src/data/: data_load.py  data_process.py  data_templete.py  data_token_count.py
src/eval/: eval.py
src/inference/: generate.py
src/monitor/: monitor.py
src/train/: arguments.py  finetune.py  hp_tune.py  train_callback.py
src/util/: data_util.py  device_util.py  lora_merge_util.py
